// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a dashboard header for a published view 1`] = `
<div>
  <div
    class="margin-top-2"
  >
    <h1
      class="display-inline-block margin-bottom-1 font-sans-2xl"
    >
      Dashboard 1
    </h1>
    <div
      class="text-base text-italic margin-bottom-2"
    >
      Test Topic Area
    </div>
  </div>
  <div
    class="margin-y-2"
  >
    <div
      class="font-sans-lg usa-prose margin-top-0"
    >
      <p>
        A test descripttion
      </p>
    </div>
  </div>
</div>
`;

exports[`renders a dashboard header for an unpublished view 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="display-inline-block margin-bottom-0"
    >
      Dashboard 1
    </h1>
    <div
      class="text-base text-italic margin-bottom-2"
    >
      Test Topic Area
    </div>
  </div>
  <div
    class=""
  >
    <p>
      A test descripttion
    </p>
  </div>
</div>
`;

exports[`renders a dashboard header for an unpublished view with a link 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="display-inline-block margin-bottom-0"
    >
      Dashboard 1
    </h1>
    A test link
    <div
      class="text-base text-italic margin-bottom-2"
    >
      Test Topic Area
    </div>
  </div>
  <div
    class=""
  >
    <p>
      A test descripttion
    </p>
  </div>
</div>
`;
